--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "nodemon": "^1.11.0",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.0.3",
+    "rethinkdb": "^2.3.3"
   },
   "scripts": {
     "start": "nodemon index"
